# curso_fastapi

./: .gitignore  .test.db  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: dd29d435971b_cria_a_tabela_de_contas_a_pagar_e_.py
contas_a_pagar/models/: conta_a_pagar_receber_model.py  fornecedor_cliente_model.py
contas_a_pagar/routers/: contas_a_pagar_e_receber_router.py  fornecedor_cliente_router.py
contas_a_pagar/test/contas_a_pagar_e_receber/routers/: test_contas_a_pagar_e_receber_router.py
shared/: database.py  exception_handler.py  exceptions.py
